--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<div id="header">
 			<h1>Maciej Buszkiewicz</h1>
-			<h2>Strona w wiecznej przebudowie!</h2>
+			<h2>Strona wiecznie udoskonalana!</h2>
 		</div>
 
 		<div id="nav">
